hello-secret-literal-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hello-secret-deployment
spec:
  replicas: 3
  minReadySeconds: 5
  selector:
    matchLabels:
      app: hello-secret-literal
  template:
    metadata:
      name: hello-secret-literal-pod
      labels:
        app: hello-secret-literal
    spec:
      containers:
        - name: cm
      image: gcr.io/terrycho-sandbox/hello-secret:v1
      imagePullPolicy: Always
      ports:
        - containerPort: 8080
