hello-ingress-staticip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress-staticip
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "35.244.193.39"
spec:
  rules:
  - http:
      paths:
      - path: /users/*
        backend:
          serviceName: users-node-svc
          servicePort: 80
      - path: /products/*
        backend:
          serviceName: products-node-svc
          servicePort: 80
