hello-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress-tls
spec:
  tls:
  - secretName: hello-ingress-secret
  rules:
  - http:
      paths:
      - path: /users/*
        backend:
          serviceName: users-node-svc
          servicePort: 80
      - path: /products/*
        backend:
          serviceName: products-node-svc
          servicePort: 80
